// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot custom 1`] = `
<strong
  class="custom-class"
  data-name="yozora-strong"
  style="color:orange"
>
  some text1
  <span>
    some text2
  </span>
</strong>
`;

exports[`snapshot default 1`] = `
<strong
  class="yozora-strong"
>
  some text1
  <span>
    some text2
  </span>
</strong>
`;
